--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,24 +7,8 @@
                 <img src="assets/images/logo.jpg" alt="nnr" class="img-responsive">
             </a>
         </div>
-        <div class="menu-sidebar-content js-scrollbar1">
-            <nav class="navbar-sidebar">
-                <ul class="list-unstyled navbar-list">
-                    <li>
-                        <a routerLink="/category/1" routerLinkActive="active-link">Books</a> <!-- routerLinkActive="active-link" est le css-->
-                    </li>
-                    <li>
-                        <a routerLink="/category/2" routerLinkActive="active-link">Coffee Mugs</a>
-                    </li>
-                    <li>
-                        <a href="#">Mouse Pads</a>
-                    </li>
-                    <li>
-                        <a href="#">Luggage Tags</a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
+        <app-product-category-menu></app-product-category-menu>
+        
     </aside>
     <!-- END MENU SIDEBAR-->
 
