--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -12,7 +12,11 @@
                         <div class="price">{{ tempProduct.unitPrice | currency:'USD' }}</div>
                         <a href="#" class="primary-btn">Add to cart</a>
                     </div>
+                </div>
 
+                <!--if products is empty then display a message-->
+                <div *ngIf="products?.length == 0" class="alert alert-warning col-md-12" role="alert"> <!-- products?.length == 0 signifie: if products is null/undefined or products.length == 0  ceci evite les null pointer-->
+                    no product found.
                 </div>
             </div>
         </div>
