--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,13 +21,8 @@
                 <div class="container-fluid">
                     <div class="header-wrap">
                         <app-search></app-search>
+                        <app-card-status></app-card-status>
                         
-                        <div class="cart-area d-n">
-                            <a href="shopping-detail.html">
-                                <div class="total">19.22 <span> 2</span> </div> <i class="fa fa-shopping-cart"
-                                    aria-hidden="true"></i>
-                            </a>
-                        </div>
                     </div>
                     <div class="account-wrap"></div>
                 </div>
