--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -10,6 +10,9 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="firstName" type="text">
+                                <div *ngIf="firstName?.invalid && (firstName?.dirty || firstName?.touched)" class="alert alert-danger mt-1">
+                                    <div *ngIf="firstName?.errors"> firstName is required and must get at least 2 characters long</div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -19,6 +22,10 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="lastName" type="text">
+                                <div *ngIf="lastName?.invalid && (lastName?.dirty || lastName?.touched)" class="alert alert-danger mt-1">
+                                    <!--the nullable does not allow to use extention after errors:     "<div *ngIf="lastName?.errors.required  || lastName?.errors.notOnlyWhiteSpace">"-->
+                                    <div *ngIf="lastName?.errors"> firstName is required and must get at least 2 characters long</div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -28,6 +35,9 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="email" type="text">
+                                <div *ngIf="email?.invalid && (email?.dirty || email?.touched)" class="alert alert-danger mt-1">
+                                    <div *ngIf="email?.errors"> email is required and must be a valid email adress format</div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -43,6 +53,11 @@
                                 <select formControlName="country" (change)="getAllStates('shippingAddress')">
                                     <option *ngFor="let country of countries" [ngValue]="country"> {{ country.name }}</option>
                                 </select>
+
+                                <div *ngIf="shippingAddressCountry?.invalid && (shippingAddressCountry?.dirty || shippingAddressCountry?.touched)" class="alert alert-danger mt-1">
+                                    <!--the nullable does not allow to use extention after errors:     "<div *ngIf="lastName?.errors.required  || lastName?.errors.notOnlyWhiteSpace">"-->
+                                    <div *ngIf="shippingAddressCountry?.errors"> country is required and must get at least 2 characters long</div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -54,6 +69,10 @@
                                 <select formControlName="state">
                                     <option *ngFor="let state of shippingAddressStates" [ngValue]="state">{{state.name}}</option>
                                 </select>
+                                <div *ngIf="shippingAddressState?.invalid && (shippingAddressState?.dirty || shippingAddressState?.touched)" class="alert alert-danger mt-1">
+                                    <!--the nullable does not allow to use extention after errors:     "<div *ngIf="lastName?.errors.required  || lastName?.errors.notOnlyWhiteSpace">"-->
+                                    <div *ngIf="shippingAddressState?.errors"> this field is required and must get at least 2 characters long</div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -63,6 +82,10 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="city" type="text">
+                                <div *ngIf="shippingAddressCity?.invalid && (shippingAddressCity?.dirty || shippingAddressCity?.touched)" class="alert alert-danger mt-1">
+                                    <!--the nullable does not allow to use extention after errors:     "<div *ngIf="lastName?.errors.required  || lastName?.errors.notOnlyWhiteSpace">"-->
+                                    <div *ngIf="shippingAddressCity?.errors"> city is required and must get at least 2 characters long</div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -72,6 +95,10 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="street" type="text">
+                                <div *ngIf="shippingAddressStreet?.invalid && (shippingAddressStreet?.dirty || shippingAddressStreet?.touched)" class="alert alert-danger mt-1">
+                                    <!--the nullable does not allow to use extention after errors:     "<div *ngIf="lastName?.errors.required  || lastName?.errors.notOnlyWhiteSpace">"-->
+                                    <div *ngIf="shippingAddressStreet?.errors"> street is required  and must get at least 2 characters long</div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -81,6 +108,10 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="zipCode" type="text">
+                                <div *ngIf="shippingAddressZipcode?.invalid && (shippingAddressZipcode?.dirty || shippingAddressZipcode?.touched)" class="alert alert-danger mt-1">
+                                    <!--the nullable does not allow to use extention after errors:     "<div *ngIf="lastName?.errors.required  || lastName?.errors.notOnlyWhiteSpace">"-->
+                                    <div *ngIf="shippingAddressZipcode?.errors"> Zip code is required is and must get at least 2 characters long</div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -104,6 +135,10 @@
                                 <select formControlName="country" (change)="getAllStates('billingAddress')">
                                     <option *ngFor="let country of countries" [ngValue]="country"> {{ country.name }}</option>
                                 </select>
+                                <div *ngIf="billingAddressCountry?.invalid && (billingAddressCountry?.dirty || billingAddressCountry?.touched)" class="alert alert-danger mt-1">
+                                    <!--the nullable does not allow to use extention after errors:     "<div *ngIf="lastName?.errors.required  || lastName?.errors.notOnlyWhiteSpace">"-->
+                                    <div *ngIf="billingAddressCountry?.errors"> country is required and must get at least 2 characters long</div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -115,6 +150,9 @@
                                 <select formControlName="state">
                                     <option *ngFor="let state of billingAddressStates" [ngValue]="state">{{state.name}}</option>
                                 </select>
+                                <div *ngIf="billingAddressState?.invalid && (billingAddressState?.dirty || billingAddressState?.touched)" class="alert alert-danger mt-1">
+                                    <div *ngIf="billingAddressState?.errors"> this field is required and must get at least 2 characters long</div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -124,6 +162,9 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="street" type="text">
+                                <div *ngIf="billingAddressStreet?.invalid && (billingAddressStreet?.dirty || billingAddressStreet?.touched)" class="alert alert-danger mt-1">
+                                    <div *ngIf="billingAddressStreet?.errors"> street is required and must get at least 2 characters long</div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -134,6 +175,9 @@
                             <div class="input-space">
                                 <input formControlName="city" type="text">
                             </div>
+                            <div *ngIf="billingAddressCity?.invalid && (billingAddressCity?.dirty || billingAddressCity?.touched)" class="alert alert-danger mt-1">
+                                <div *ngIf="billingAddressCity?.errors"> city is required and must get at least 2 characters long</div>
+                            </div>
                         </div>
                     </div>
 
@@ -142,6 +186,9 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="zipCode" type="text">
+                                <div *ngIf="billingAddressZipcode?.invalid && (billingAddressZipcode?.dirty || billingAddressZipcode?.touched)" class="alert alert-danger mt-1">
+                                    <div *ngIf="billingAddressZipcode?.errors"> zip code is required and must get at least 2 characters long</div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -154,10 +201,24 @@
                         <div class="col-md-2"><label>Name on Card</label></div>
                         <div class="col-md-9">
                             <div class="input-space">
-                                <select formControlName="nameOnCard">
+                                <select formControlName="type">
                                     <option value="">Visa</option>
                                     <option value="">MasterCard</option>
                                 </select>
+                                <div *ngIf="creditCardType?.invalid && (creditCardType?.dirty || creditCardType?.touched)" class="alert alert-danger mt-1">
+                                    <div *ngIf="creditCardType?.errors"> credit card type is required </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-2"><label>Name on Card</label></div>
+                        <div class="col-md-9">
+                            <div class="input-space">
+                                <input formControlName="nameOnCard" type="text">
+                                <div *ngIf="creditCardNameOnCard?.invalid && (creditCardNameOnCard?.dirty || creditCardNameOnCard?.touched)" class="alert alert-danger mt-1">
+                                    <div *ngIf="creditCardNameOnCard?.errors"> name is required and must get at least 2 characters long</div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -167,6 +228,9 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="cardNumber" type="text">
+                                <div *ngIf="creditCardNumber?.invalid && (creditCardNumber?.dirty || creditCardNumber?.touched)" class="alert alert-danger mt-1">
+                                    <div *ngIf="creditCardNumber?.errors"> name is required and must get 16 digit</div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -176,15 +240,9 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="securityCode" type="text">
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <div class="col-md-2"><label>Security Code</label></div>
-                        <div class="col-md-9">
-                            <div class="input-space">
-                                <input formControlName="securityCode" type="text">
+                                <div *ngIf="creditCardSecurityCode?.invalid && (creditCardSecurityCode?.dirty || creditCardSecurityCode?.touched)" class="alert alert-danger mt-1">
+                                    <div *ngIf="creditCardSecurityCode?.errors"> name is required and must get 3 digit</div>
+                                </div>
                             </div>
                         </div>
                     </div>
