--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -11,7 +11,7 @@
                             <div class="input-space">
                                 <input formControlName="firstName" type="text">
                                 <div *ngIf="firstName?.invalid && (firstName?.dirty || firstName?.touched)" class="alert alert-danger mt-1">
-                                    <div *ngIf="firstName?.errors"> firstName is required and must get at least 2 characters long</div>
+                                    <div *ngIf="firstName?.errors"> firstName is required and must be at least 2 characters long</div>
                                 </div>
                             </div>
                         </div>
@@ -24,7 +24,7 @@
                                 <input formControlName="lastName" type="text">
                                 <div *ngIf="lastName?.invalid && (lastName?.dirty || lastName?.touched)" class="alert alert-danger mt-1">
                                     <!--the nullable does not allow to use extention after errors:     "<div *ngIf="lastName?.errors.required  || lastName?.errors.notOnlyWhiteSpace">"-->
-                                    <div *ngIf="lastName?.errors"> firstName is required and must get at least 2 characters long</div>
+                                    <div *ngIf="lastName?.errors"> firstName is required and must be at least 2 characters long</div>
                                 </div>
                             </div>
                         </div>
@@ -56,7 +56,7 @@
 
                                 <div *ngIf="shippingAddressCountry?.invalid && (shippingAddressCountry?.dirty || shippingAddressCountry?.touched)" class="alert alert-danger mt-1">
                                     <!--the nullable does not allow to use extention after errors:     "<div *ngIf="lastName?.errors.required  || lastName?.errors.notOnlyWhiteSpace">"-->
-                                    <div *ngIf="shippingAddressCountry?.errors"> country is required and must get at least 2 characters long</div>
+                                    <div *ngIf="shippingAddressCountry?.errors"> country is required and must be at least 2 characters long</div>
                                 </div>
                             </div>
                         </div>
@@ -71,7 +71,7 @@
                                 </select>
                                 <div *ngIf="shippingAddressState?.invalid && (shippingAddressState?.dirty || shippingAddressState?.touched)" class="alert alert-danger mt-1">
                                     <!--the nullable does not allow to use extention after errors:     "<div *ngIf="lastName?.errors.required  || lastName?.errors.notOnlyWhiteSpace">"-->
-                                    <div *ngIf="shippingAddressState?.errors"> this field is required and must get at least 2 characters long</div>
+                                    <div *ngIf="shippingAddressState?.errors"> this field is required and must be at least 2 characters long</div>
                                 </div>
                             </div>
                         </div>
@@ -84,7 +84,7 @@
                                 <input formControlName="city" type="text">
                                 <div *ngIf="shippingAddressCity?.invalid && (shippingAddressCity?.dirty || shippingAddressCity?.touched)" class="alert alert-danger mt-1">
                                     <!--the nullable does not allow to use extention after errors:     "<div *ngIf="lastName?.errors.required  || lastName?.errors.notOnlyWhiteSpace">"-->
-                                    <div *ngIf="shippingAddressCity?.errors"> city is required and must get at least 2 characters long</div>
+                                    <div *ngIf="shippingAddressCity?.errors"> city is required and must be at least 2 characters long</div>
                                 </div>
                             </div>
                         </div>
@@ -97,7 +97,7 @@
                                 <input formControlName="street" type="text">
                                 <div *ngIf="shippingAddressStreet?.invalid && (shippingAddressStreet?.dirty || shippingAddressStreet?.touched)" class="alert alert-danger mt-1">
                                     <!--the nullable does not allow to use extention after errors:     "<div *ngIf="lastName?.errors.required  || lastName?.errors.notOnlyWhiteSpace">"-->
-                                    <div *ngIf="shippingAddressStreet?.errors"> street is required  and must get at least 2 characters long</div>
+                                    <div *ngIf="shippingAddressStreet?.errors"> street is required  and must be at least 2 characters long</div>
                                 </div>
                             </div>
                         </div>
@@ -110,7 +110,7 @@
                                 <input formControlName="zipCode" type="text">
                                 <div *ngIf="shippingAddressZipcode?.invalid && (shippingAddressZipcode?.dirty || shippingAddressZipcode?.touched)" class="alert alert-danger mt-1">
                                     <!--the nullable does not allow to use extention after errors:     "<div *ngIf="lastName?.errors.required  || lastName?.errors.notOnlyWhiteSpace">"-->
-                                    <div *ngIf="shippingAddressZipcode?.errors"> Zip code is required is and must get at least 2 characters long</div>
+                                    <div *ngIf="shippingAddressZipcode?.errors"> Zip code is required is and must be at least 2 characters long</div>
                                 </div>
                             </div>
                         </div>
@@ -137,7 +137,7 @@
                                 </select>
                                 <div *ngIf="billingAddressCountry?.invalid && (billingAddressCountry?.dirty || billingAddressCountry?.touched)" class="alert alert-danger mt-1">
                                     <!--the nullable does not allow to use extention after errors:     "<div *ngIf="lastName?.errors.required  || lastName?.errors.notOnlyWhiteSpace">"-->
-                                    <div *ngIf="billingAddressCountry?.errors"> country is required and must get at least 2 characters long</div>
+                                    <div *ngIf="billingAddressCountry?.errors"> country is required and must be at least 2 characters long</div>
                                 </div>
                             </div>
                         </div>
@@ -151,7 +151,7 @@
                                     <option *ngFor="let state of billingAddressStates" [ngValue]="state">{{state.name}}</option>
                                 </select>
                                 <div *ngIf="billingAddressState?.invalid && (billingAddressState?.dirty || billingAddressState?.touched)" class="alert alert-danger mt-1">
-                                    <div *ngIf="billingAddressState?.errors"> this field is required and must get at least 2 characters long</div>
+                                    <div *ngIf="billingAddressState?.errors"> this field is required and must be at least 2 characters long</div>
                                 </div>
                             </div>
                         </div>
@@ -163,7 +163,7 @@
                             <div class="input-space">
                                 <input formControlName="street" type="text">
                                 <div *ngIf="billingAddressStreet?.invalid && (billingAddressStreet?.dirty || billingAddressStreet?.touched)" class="alert alert-danger mt-1">
-                                    <div *ngIf="billingAddressStreet?.errors"> street is required and must get at least 2 characters long</div>
+                                    <div *ngIf="billingAddressStreet?.errors"> street is required and must be at least 2 characters long</div>
                                 </div>
                             </div>
                         </div>
@@ -176,7 +176,7 @@
                                 <input formControlName="city" type="text">
                             </div>
                             <div *ngIf="billingAddressCity?.invalid && (billingAddressCity?.dirty || billingAddressCity?.touched)" class="alert alert-danger mt-1">
-                                <div *ngIf="billingAddressCity?.errors"> city is required and must get at least 2 characters long</div>
+                                <div *ngIf="billingAddressCity?.errors"> city is required and must be at least 2 characters long</div>
                             </div>
                         </div>
                     </div>
@@ -187,7 +187,7 @@
                             <div class="input-space">
                                 <input formControlName="zipCode" type="text">
                                 <div *ngIf="billingAddressZipcode?.invalid && (billingAddressZipcode?.dirty || billingAddressZipcode?.touched)" class="alert alert-danger mt-1">
-                                    <div *ngIf="billingAddressZipcode?.errors"> zip code is required and must get at least 2 characters long</div>
+                                    <div *ngIf="billingAddressZipcode?.errors"> zip code is required and must be at least 2 characters long</div>
                                 </div>
                             </div>
                         </div>
@@ -217,7 +217,7 @@
                             <div class="input-space">
                                 <input formControlName="nameOnCard" type="text">
                                 <div *ngIf="creditCardNameOnCard?.invalid && (creditCardNameOnCard?.dirty || creditCardNameOnCard?.touched)" class="alert alert-danger mt-1">
-                                    <div *ngIf="creditCardNameOnCard?.errors"> name is required and must get at least 2 characters long</div>
+                                    <div *ngIf="creditCardNameOnCard?.errors"> name is required and must be at least 2 characters long</div>
                                 </div>
                             </div>
                         </div>
@@ -229,7 +229,7 @@
                             <div class="input-space">
                                 <input formControlName="cardNumber" type="text">
                                 <div *ngIf="creditCardNumber?.invalid && (creditCardNumber?.dirty || creditCardNumber?.touched)" class="alert alert-danger mt-1">
-                                    <div *ngIf="creditCardNumber?.errors"> name is required and must get 16 digit</div>
+                                    <div *ngIf="creditCardNumber?.errors"> name is required and must be 16 digit long</div>
                                 </div>
                             </div>
                         </div>
@@ -241,7 +241,7 @@
                             <div class="input-space">
                                 <input formControlName="securityCode" type="text">
                                 <div *ngIf="creditCardSecurityCode?.invalid && (creditCardSecurityCode?.dirty || creditCardSecurityCode?.touched)" class="alert alert-danger mt-1">
-                                    <div *ngIf="creditCardSecurityCode?.errors"> name is required and must get 3 digit</div>
+                                    <div *ngIf="creditCardSecurityCode?.errors"> name is required and must be 3 digit long</div>
                                 </div>
                             </div>
                         </div>
